movement and basic aspect
implemented movement with friction

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,11 +43,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=0
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.MotionBlur=False
+r.Mobile.AntiAliasing=1
+r.AntiAliasingMethod=4
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
